Added search for the link option

--- a/packages/components/src/scss/tooltip.scss
+++ b/packages/components/src/scss/tooltip.scss
@@ -1,97 +1,8 @@
-[data-zion-tooltip] {
-	position: relative;
-
-	&::before {
-		content: attr(data-zion-tooltip);
-		position: absolute;
-		bottom: calc(100% + 10px);
-		left: 50%;
-		z-index: 9999;
-		box-sizing: border-box;
-		width: max-content;
-		max-width: 200px;
-		padding: 5px 10px;
-		color: #858585;
-		font-size: 12px;
-		font-weight: normal;
-		line-height: 1.6;
-		text-align: center;
-		text-transform: none;
-		background-color: #fff;
-		box-shadow: 0 2px 15px 0 rgba(0, 0, 0, .1);
-		border: 1px solid #f1f1f1;
-		border-radius: 4px;
-		transform: translateX(-50%);
-		transition: opacity .2s, visibility .15s;
-		opacity: 0;
-		visibility: hidden;
-	}
-
-	&::after {
-		content: "";
-		position: absolute;
-		bottom: calc(100% + 7px);
-		left: 50%;
-		z-index: 9999;
-		width: 8px;
-		height: 8px;
-		background: #fff;
-		transform: translateX(-50%) rotate(45deg);
-		transition: opacity .2s, visibility .15s;
-		opacity: 0;
-		visibility: hidden;
-	}
-
-	&:hover::before, &:hover::after {
-		opacity: 1;
-		visibility: visible;
-	}
-}
-
-[data-zion-tooltip-position="right"] {
-	&::before {
-		top: 50%;
-		bottom: auto;
-		left: calc(100% + 10px);
-		transform: translateY(-50%);
-	}
-
-	&::after {
-		top: 50%;
-		bottom: auto;
-		left: calc(100% + 7px);
-		transform: translateY(-50%) rotate(45deg);
-	}
-}
-
-[data-zion-tooltip-position="bottom"] {
-	&::before {
-		top: calc(100% + 10px);
-		bottom: auto;
-		left: 50%;
-	}
-
-	&::after {
-		top: calc(100% + 7px);
-		bottom: auto;
-		left: 50%;
-	}
-}
-
-[data-zion-tooltip-position="left"] {
-	&::before {
-		top: 50%;
-		right: calc(100% + 10px);
-		bottom: auto;
-		left: auto;
-		transform: translateY(-50%);
-	}
-
-	&::after {
-		top: 50%;
-		right: calc(100% + 7px);
-		bottom: auto;
-		left: auto;
-		transform: translateY(-50%) rotate(45deg);
-	}
+body .hg-popper-tooltip {
+	max-width: 200px;
+	padding: 5px 10px;
+	font-size: 12px;
+	font-weight: normal;
+	line-height: 1.6;
+	text-align: center;
 }
