--- a/packages/css-variables/frontend/_general.scss
+++ b/packages/css-variables/frontend/_general.scss
@@ -2,6 +2,7 @@
 	img {
 		display: inline-block;
 		max-width: 100%;
+		height: auto;
 		vertical-align: top;
 	}
 
@@ -45,4 +46,3 @@
 		visibility: visible;
 	}
 }
-
