--- a/packages/css-variables/_variables.scss
+++ b/packages/css-variables/_variables.scss
@@ -6,11 +6,13 @@
 	--zb-primary-color: #18208d;
 	--zb-primary-hover-color: #161d80;
 	--zb-primary-text-color: #fff;
+	--zb-primary-rgb-color: 24, 32, 141;
 
 	// Secondary Colors
 	--zb-secondary-color: #006dd2;
 	--zb-secondary-hover-color: #0065c3;
 	--zb-secondary-text-color: #fff;
+	--zb-secondary-rgb-color: 0, 109, 210;
 
 	// Alert Colors
 	--zb-success-color: #28a745;
@@ -22,6 +24,7 @@
 	--zb-surface-color: #fff;
 	--zb-surface-light-color: #f5f5f5;
 	--zb-surface-lighter-color: #f1f1f1;
+	--zb-surface-lighter-rgb-color: 241, 241, 241;
 	--zb-surface-lightest-color: #e9e9e9;
 	--zb-surface-darker-color: #f1f1f1;
 	--zb-surface-text-color: #858585;
@@ -73,6 +76,7 @@
 	--zb-surface-color: #28282C;
 	--zb-surface-light-color: #2C2C30;
 	--zb-surface-lighter-color: #2F2F34;
+	--zb-surface-lighter-rgb-color: 47, 47, 52;
 	--zb-surface-lightest-color: #35353b;
 	--zb-surface-darker-color: #222225;
 	--zb-surface-text-color: #858585;
@@ -134,9 +138,6 @@ $font-color: #858585;
 $icons-color: #b4b4b4;
 $surface-headings-color: #bcbcbc;
 $surface-active-color: #464646;
-
-//pro
-$red: #ed3535;
 
 //save
 $green: #31d783;
