--- a/packages/css-variables/frontend/_video.scss
+++ b/packages/css-variables/frontend/_video.scss
@@ -16,7 +16,7 @@
 
 		&:hover {
 			.hg-video-bg__controls {
-				color: $surface;
+				color: var(--zb-surface-color);
 				cursor: pointer;
 				opacity: 1;
 			}
