CSS Vars Update

--- a/packages/css-variables/_mixins.scss
+++ b/packages/css-variables/_mixins.scss
@@ -14,9 +14,9 @@
 	position: absolute;
 	top: 50%;
 	display: block;
-	width: 14px;
-	height: 14px;
-	background-color: #fff;
+	width: 16px;
+	height: 16px;
+	background-color: var(--zb-surface-color);
 	box-shadow: 0 0 10px 0 rgba(0, 0, 0, .4);
 	border-radius: 50%;
 	transform: translate(-50%, -50%);
