Fixed various issues with dark theme

--- a/packages/editor/src/scss/index.scss
+++ b/packages/editor/src/scss/index.scss
@@ -1,9 +1,4 @@
-@import "~@zionbuilder/css-variables";
 @import "~@zionbuilder/css-variables/editor";
-
-:root {
-	--zion-border-color: #e5e5e5;
-}
 
 #znpb-app {
 	height: 100%;
@@ -29,19 +24,11 @@ body * {
 	font-size: 13px;
 	line-height: 1;
 
-	a,
-	a:hover,
-	a:focus,
-	a:visited {
+	a, a:hover, a:focus, a:visited {
 		text-decoration: none;
 	}
 
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
+	h1, h2, h3, h4, h5, h6 {
 		margin: 0;
 		line-height: 1;
 	}
@@ -72,8 +59,7 @@ body * {
 		-webkit-appearance: none;
 	}
 
-	b,
-	strong {
+	b, strong {
 		font-weight: 700;
 	}
 
@@ -93,8 +79,7 @@ body * {
 	}
 }
 
-.znpb-main-wrapper,
-.znpb-main-wrapper * {
+.znpb-main-wrapper, .znpb-main-wrapper * {
 	box-sizing: border-box;
 }
 
