--- a/packages/css-variables/_variables.scss
+++ b/packages/css-variables/_variables.scss
@@ -28,6 +28,7 @@
 	--zb-surface-lightest-color: #e9e9e9;
 	--zb-surface-darker-color: #f1f1f1;
 	--zb-surface-text-color: #858585;
+	--zb-surface-text-muted-color: #b2b2b2;
 	--zb-surface-text-hover-color: #5f5f5f;
 	--zb-surface-text-active-color: #464646;
 	--zb-surface-icon-color: #bcbcbc;
@@ -80,6 +81,7 @@
 	--zb-surface-lightest-color: #35353b;
 	--zb-surface-darker-color: #222225;
 	--zb-surface-text-color: #858585;
+	--zb-surface-text-muted-color: #525252;
 	--zb-surface-text-hover-color: #9F9F9F;
 	--zb-surface-text-active-color: #d6d6d6;
 	--zb-surface-icon-color: #727272;
