--- a/packages/editor/src/scss/index.scss
+++ b/packages/editor/src/scss/index.scss
@@ -8,7 +8,7 @@
 	width: 100%;
 	height: 100%;
 	margin: 0 !important;
-	font-family: var(--zb-font-stack);
+	font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 	font-size: 14px;
 }
 
@@ -19,8 +19,7 @@ body * {
 .znpb-main-wrapper {
 	display: flex;
 	flex-direction: column;
-	color: var(--zb-surface-text-color);
-	font-family: var(--zb-font-stack);
+	color: #858585;
 	font-size: 13px;
 	line-height: 1;
 
@@ -52,7 +51,7 @@ body * {
 	}
 
 	.znpb-button {
-		font-family: var(--zb-font-stack);
+		font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 		font-size: 13px;
 		text-decoration: none;
 
@@ -67,9 +66,9 @@ body * {
 		min-width: 100%;
 		min-height: 140px;
 		padding: 16px 14px;
-		color: var(--zb-surface-text-color);
-		font-family: var(--zb-font-stack);
-		background-color: var(--zb-surface-color);
+		color: #858585;
+		font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+		background-color: #fff;
 		border: 0;
 		border-radius: 3px;
 
