Updated CSS vars

--- a/packages/css-variables/_variables.scss
+++ b/packages/css-variables/_variables.scss
@@ -109,6 +109,6 @@
 	--zb-dropdown-bg-active-color: var(--zb-surface-lighter-color);
 	--zb-dropdown-text-color: var(--zb-surface-text-color);
 	--zb-dropdown-text-active-color: var(--zb-surface-text-active-color);
-	--zb-dropdown-border-color: transparent;
+	--zb-dropdown-border-color: #35353b;
 	--zb-dropdown-shadow: 0 10px 30px 0 rgba(20, 20, 20, 0.5);
 }
