--- a/packages/components/src/scss/menuList.scss
+++ b/packages/components/src/scss/menuList.scss
@@ -6,14 +6,14 @@
 
 .znpb-menuListItem {
 	padding: 8px 16px;
-	color: #858585;
+	color: var(--zb-surface-text-color);
 	font-weight: 500;
 	text-align: left;
 	cursor: pointer;
 }
 
 .znpb-menuListItem--selected, .znpb-menuListItem:hover {
-	color: #464646;
+	color: var(--zb-surface-text-active-color);
 	font-weight: 500;
-	background-color: #f6f6f6;
+	background-color: var(--zb-surface-lighter-color);
 }
