Added base files for dark mode option

--- a/packages/components/src/scss/index.scss
+++ b/packages/components/src/scss/index.scss
@@ -1,3 +1,5 @@
+@import "~@zionbuilder/css-variables/_mixins.scss";
+@import "~@zionbuilder/css-variables/_animations.scss";
 @import "./helpers.scss";
 @import "./tooltip.scss";
 @import "./menuList.scss";
