Added admin option for builder theme

--- a/packages/components/src/scss/index.scss
+++ b/packages/components/src/scss/index.scss
@@ -1,5 +1,6 @@
 @import "~@zionbuilder/css-variables/_mixins.scss";
 @import "~@zionbuilder/css-variables/_animations.scss";
+@import "~@zionbuilder/css-variables/_variables.scss";
 @import "./helpers.scss";
 @import "./tooltip.scss";
 @import "./menuList.scss";
