--- a/packages/css-variables/_variables.scss
+++ b/packages/css-variables/_variables.scss
@@ -1,4 +1,4 @@
-:root{
+:root {
 	// Font Stack
 	--zb-font-stack: 'Roboto', sans-serif;
 
@@ -72,7 +72,7 @@
 	--zb-element-border-color: #b4ebf6;
 }
 
-:root .dark-theme{
+:root .znpb-theme-dark {
 	// Surface Colors
 	--zb-surface-color: #28282C;
 	--zb-surface-light-color: #2C2C30;
