Updated CSS vars

--- a/packages/css-variables/_mixins.scss
+++ b/packages/css-variables/_mixins.scss
@@ -16,7 +16,7 @@
 	display: block;
 	width: 16px;
 	height: 16px;
-	background-color: var(--zb-surface-color);
+	background-color: var(--zb-surface-lighter-color);
 	box-shadow: 0 0 10px 0 rgba(0, 0, 0, .4);
 	border-radius: 50%;
 	transform: translate(-50%, -50%);
