--- a/packages/css-variables/_variables.scss
+++ b/packages/css-variables/_variables.scss
@@ -97,7 +97,7 @@
 
 	// Panel vars
 	--zb-panel-header-border: var(--zb-surface-lighter-color);
-	--zb-panel-sideborder: 0;
+	--zb-panel-sideborder: 1px;
 	--zb-elements-border-color: var(--zb-surface-border-color);
 
 	// Forms
