Fixed shape divider default color is not white

--- a/packages/css-variables/frontend/_masks.scss
+++ b/packages/css-variables/frontend/_masks.scss
@@ -5,6 +5,7 @@
 	left: 0;
 	width: 100%;
 	height: auto;
+	color: #fff;
 	line-height: 0;
 
 	svg {
@@ -19,13 +20,14 @@
 		&--top {
 			top: -1px;
 			bottom: auto;
+
 			svg {
 				transform: rotate(180deg);
 			}
 
 			&.zb-mask-pos--flip {
 				svg {
-					transform: rotate(180deg) scale(-1,1);
+					transform: rotate(180deg) scale(-1, 1);
 				}
 			}
 		}
@@ -33,11 +35,9 @@
 		&--bottom {
 			&.zb-mask-pos--flip {
 				svg {
-					transform: scale(-1,1);
+					transform: scale(-1, 1);
 				}
 			}
 		}
 	}
 }
-
-
