--- a/packages/css-variables/edit-page.scss
+++ b/packages/css-variables/edit-page.scss
@@ -16,7 +16,7 @@
 
 	.editor-styles-wrapper .znpb-admin-post__edit-button {
 		color: #fff;
-		font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+		font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	}
 }
 
@@ -34,7 +34,7 @@
 		padding: 14px 32px;
 		margin-right: 10px;
 		color: #fff;
-		font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+		font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 		font-size: 13px;
 		text-decoration: none;
 		background: #006dd2;
@@ -50,6 +50,7 @@
 			color: #fff;
 			font-size: 14px;
 		}
+
 		svg:not(:root) {
 			overflow: visible;
 		}
@@ -134,6 +135,7 @@
 	from {
 		transform: rotate(0deg);
 	}
+
 	to {
 		transform: rotate(360deg);
 	}
