--- a/packages/editor/src/scss/index.scss
+++ b/packages/editor/src/scss/index.scss
@@ -8,7 +8,7 @@
 	width: 100%;
 	height: 100%;
 	margin: 0 !important;
-	font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+	font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	font-size: 14px;
 }
 
@@ -51,7 +51,7 @@ body * {
 	}
 
 	.znpb-button {
-		font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+		font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 		font-size: 13px;
 		text-decoration: none;
 
@@ -67,7 +67,7 @@ body * {
 		min-height: 140px;
 		padding: 16px 14px;
 		color: #858585;
-		font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+		font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 		background-color: #fff;
 		border: 0;
 		border-radius: 3px;
@@ -107,4 +107,8 @@ body * {
 
 .znpb-utility__cursor--pointer {
 	cursor: pointer;
+}
+
+.znpb-utility__cursor--move {
+	cursor: move;
 }
