Fixed icon list scroll not working in mega menu
Fixed https://hogash.atlassian.net/browse/ZB-2523

--- a/packages/components/src/scss/index.scss
+++ b/packages/components/src/scss/index.scss
@@ -1,6 +1,7 @@
 @import "~@zionbuilder/css-variables/_mixins.scss";
 @import "~@zionbuilder/css-variables/_animations.scss";
 @import "~@zionbuilder/css-variables/_variables.scss";
+@import "~@zionbuilder/css-variables/_scrollbar.scss";
 @import "./helpers.scss";
 @import "./tooltip.scss";
 @import "./menuList.scss";
