--- a/packages/css-variables/frontend/_grid.scss
+++ b/packages/css-variables/frontend/_grid.scss
@@ -94,9 +94,9 @@ $columns: 12;
 			position: relative;
 			display: flex;
 			flex-wrap: wrap;
-			flex: 1 1 auto;
-			width: 100%;
-			max-width: 1120px;
+			flex: var(--zb-section-flex, 1 1 auto);
+			width: var(--zb-section-width, 100%);
+			max-width: var(--zb-section-max-width, 1120px);
 		}
 	}
 
