--- a/packages/css-variables/frontend/utils/media.scss
+++ b/packages/css-variables/frontend/utils/media.scss
@@ -1,5 +1,4 @@
-$breakpoints: (
-	lg: "991.98px",
-	md: "767.98px",
-	sm: "575.98px",
+$breakpoints: (lg: "__ZIONBUILDER_LAPTOP__",
+	md: "__ZIONBUILDER_TABLET__",
+	sm: "__ZIONBUILDER_MOBILE_",
 );
