Fixed PHP notices appearing in certain conditions

--- a/packages/css-variables/frontend.scss
+++ b/packages/css-variables/frontend.scss
@@ -2,6 +2,6 @@
 @import "./frontend/_grid";
 @import "./frontend/_video";
 @import "./frontend/_utils";
-@import "./zionicons";
+@import "./frontend/_zion-icons";
 @import "./frontend/_background";
 @import "./frontend/_masks";
