--- a/packages/css-variables/frontend/_zion-icons.scss
+++ b/packages/css-variables/frontend/_zion-icons.scss
@@ -1,15 +1,15 @@
-@font-face {
-	font-family: "zion-icons";
-	font-style: normal;
-	font-weight: normal;
+// @font-face {
+// 	font-family: "zion-icons";
+// 	font-style: normal;
+// 	font-weight: normal;
 
-	src: url("./fonts/zion.eot");
-	src: url("./fonts/zion.eot?#iefix") format("embedded-opentype"),
-	url("./fonts/zion.woff2") format("woff2"),
-	url("./fonts/zion.woff") format("woff"),
-	url("./fonts/zion.ttf") format("truetype"),
-	url("./fonts/zion.svg#zion") format("svg");
-}
+// 	src: url("./fonts/zion.eot");
+// 	src: url("./fonts/zion.eot?#iefix") format("embedded-opentype"),
+// 		url("./fonts/zion.woff2") format("woff2"),
+// 		url("./fonts/zion.woff") format("woff"),
+// 		url("./fonts/zion.ttf") format("truetype"),
+// 		url("./fonts/zion.svg#zion") format("svg");
+// }
 
 @mixin zion-font {
 	display: inline-block;
@@ -40,22 +40,32 @@
 	/* Uncomment for 3D effect */
 	/* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
-[class^="zion-"]:before, [class*=" zion-"]:before {
+
+[class^="zion-"]:before,
+[class*=" zion-"]:before {
 	@include zion-font;
 }
 
 .zion-pause:before {
 	content: "\e800";
-} /* '' */
+}
+
+/* '' */
 .zion-play:before {
 	content: "\e801";
-} /* '' */
+}
+
+/* '' */
 .zion-sound-off:before {
 	content: "\e802";
-} /* '' */
+}
+
+/* '' */
 .zion-sound-on:before {
 	content: "\e803";
-} /* '' */
-.zion-play-filled:before {
-	content: "\e804";
 }
+
+/* '' */
+// .zion-play-filled:before {
+// 	content: "\e804";
+// }
