--- a/packages/css-variables/frontend/_video.scss
+++ b/packages/css-variables/frontend/_video.scss
@@ -10,7 +10,7 @@
 		width: 100%;
 		height: 100%;
 
-		& ~ * {
+		&~* {
 			position: relative;
 		}
 
@@ -31,7 +31,8 @@
 		width: 100%;
 		height: 100%;
 
-		& iframe, & video {
+		& iframe,
+		& video {
 			position: absolute;
 			top: 50%;
 			left: 50%;
