--- a/packages/css-variables/frontend/_general.scss
+++ b/packages/css-variables/frontend/_general.scss
@@ -29,12 +29,18 @@
 		margin-bottom: 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
 		padding-top: 0;
 		margin-top: 0;
 	}
 
-	b, strong {
+	b,
+	strong {
 		font-weight: bold;
 	}
 }
@@ -45,4 +51,12 @@
 	&.animated {
 		visibility: visible;
 	}
+}
+
+/** Icons **/
+.zb-icon svg {
+	display: block;
+	width: 1em;
+	height: 1em;
+	fill: currentColor;
 }
