Bugifx/3.0.0 bug fixing (#660)
* Fixed spelling errors in Responsive.php

* Fixed PHP notices appearing in certain conditions

* Added inline play icon as svg

* Added zb-icons as inline svg

* Added zb-icon css class for frontend icons

* Styled zb-icon class

* Moved video script to packages

* Replaced zion-icons with inline svg's for background video

* Added overlay for the video element in edit mode

* Fixed custom breakpoint css not applying in editor for custom css class

* Set preview auto-scale on by default

* Fixed post taxonomies not loading in dynamic field

Co-authored-by: Danny <daniel@zionbuilder.io>

--- a/packages/css-variables/frontend/_background.scss
+++ b/packages/css-variables/frontend/_background.scss
@@ -3,49 +3,57 @@
 		&[data-position="center"] {
 			text-align: center;
 		}
+
 		&[data-position="right"] {
 			text-align: right;
 		}
+
 		&[data-position="left"] {
 			text-align: left;
 		}
 	}
 
 	&__controls-button {
-		&--play, &--mute {
-			&:before {
-				@include zion-font;
-			}
+
+		& svg {
+			margin-right: .2em;
+			margin-left: .2em;
+			display: inline-block;
 		}
-		&--play {
-			&:before {
-				content: "\e801";
-			}
+
+		.hg-video-bg__controls-button--svg-pause {
+			display: none;
 		}
-		&--mute {
-			&:before {
-				content: "\e803";
-			}
+
+		.hg-video-bg__controls-button--svg-mute {
+			display: none;
 		}
 	}
 
 	&--muted {
-		.hg-video-bg__controls-button--mute {
-			&:before {
-				content: "\e802";
-			}
+		.hg-video-bg__controls-button--svg-unmute {
+			display: none;
+		}
+
+		.hg-video-bg__controls-button--svg-mute {
+			display: inline-block;
 		}
 	}
 
 	&--playing {
-		.hg-video-bg__controls-button--play {
-			&:before {
-				content: "\e800";
-			}
+		.hg-video-bg__controls-button--svg-play {
+			display: none;
+		}
+
+		.hg-video-bg__controls-button--svg-pause {
+			display: inline-block;
 		}
 	}
+
 	&--contain {
-		iframe, video {
+
+		iframe,
+		video {
 			object-fit: contain;
 		}
 	}
