--- a/packages/elements/src/Tabs/scss/main.scss
+++ b/packages/elements/src/Tabs/scss/main.scss
@@ -56,6 +56,7 @@
 			overflow: hidden;
 			opacity: 0;
 			visibility: hidden;
+			height: 0;
 
 			&.zb-el-tabs-nav--active {
 				position: relative;
@@ -63,6 +64,7 @@
 				overflow: auto;
 				opacity: 1;
 				visibility: visible;
+				height: auto;
 			}
 		}
 	}
