--- a/packages/elements/src/Video/scss/main.scss
+++ b/packages/elements/src/Video/scss/main.scss
@@ -1,5 +1,25 @@
 .zb-el-zionVideo {
 	position: relative;
+	display: block;
+	width: 100%;
+	padding: 0;
+	overflow: hidden;
+
+	&:before {
+		padding-top: 56.25%;
+		content: " ";
+		display: block;
+	}
+
+	iframe {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border: 0;
+	}
 
 	&-wrapper video {
 		display: block;
