Added dev server using vite

--- a/src/admin/scss/index.scss
+++ b/src/admin/scss/index.scss
@@ -1,4 +1,3 @@
-@import "../../scss/mixins";
-@import "../../scss/_scrollbar";
-@import "../../scss/_animations";
+@import "../../common/scss/scrollbar";
+@import "../../common/scss/_animations";
 @import "./admin-rtl.scss";
