Changed color for loader

--- a/src/common/scss/_variables.scss
+++ b/src/common/scss/_variables.scss
@@ -34,7 +34,7 @@
 	--zb-surface-icon-color: #bcbcbc;
 	--zb-surface-icon-active-color: #858585;
 	--zb-surface-border-color: #e5e5e5;
-	--zb-surface-loader-color: #e5e5e5;
+	--zb-surface-loader-color: #b5b5b5;
 	--zb-surface-shadow: rgba(164, 164, 164, 0.08);
 	--zb-surface-shadow-hover: rgba(164, 164, 164, 0.22);
 	--zb-surface-shadow-stronger: rgba(0, 0, 0, 0.1);
@@ -90,7 +90,7 @@
 	--zb-surface-icon-color: #8d8d8d;
 	--zb-surface-icon-active-color: #a5a5a5;
 	--zb-surface-border-color: #3d3d40;
-	--zb-surface-loader-color: #424242;
+	--zb-surface-loader-color: #686868;
 	--zb-surface-shadow: rgba(20, 20, 20, 0.1);
 	--zb-surface-shadow-hover: rgba(20, 20, 20, 0.25);
 	--zb-surface-shadow-stronger: rgba(0, 0, 0, 0.2);
