Fixed some icons are not properly centered

--- a/src/elements/Icon/frontend.scss
+++ b/src/elements/Icon/frontend.scss
@@ -16,7 +16,9 @@ a.zb-el-icon-icon.zb-el-icon-link {
 	&:before {
 		width: 1em;
 		height: 1em;
-		text-align: center;
+		display: flex;
+		justify-content: center;
+		vertical-align: middle;
 	}
 }
 
